{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 411,
  "lineage": "0bf52870-83bd-35ea-5ee7-c0aef29a8d18",
  "resources": [
    {
      "module": "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:983119644965:security-group/sg-073bc7c5d392a25c4",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c88e92377a598e50"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c88e92377a598e50"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-073bc7c5d392a25c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c88e92377a598e50"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-cluster-20221204103832641000000001",
            "name_prefix": "demo-cluster-",
            "owner_id": "983119644965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-cluster"
            },
            "tags_all": {
              "Name": "demo-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-099f541c1e0355870"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:983119644965:security-group/sg-0c88e92377a598e50",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073bc7c5d392a25c4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0c88e92377a598e50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073bc7c5d392a25c4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073bc7c5d392a25c4"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "demo-node-20221204103832643500000002",
            "name_prefix": "demo-node-",
            "owner_id": "983119644965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-node",
              "kubernetes.io/cluster/demo": "owned"
            },
            "tags_all": {
              "Name": "demo-node",
              "kubernetes.io/cluster/demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-099f541c1e0355870"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-645160086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-073bc7c5d392a25c4",
            "security_group_rule_id": "sgr-0e7c4fac983cab030",
            "self": false,
            "source_security_group_id": "sg-0c88e92377a598e50",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1004964496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-073bc7c5d392a25c4",
            "security_group_rule_id": "sgr-0cc8d31636d15a6dc",
            "self": false,
            "source_security_group_id": "sg-0c88e92377a598e50",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-93209784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-073bc7c5d392a25c4",
            "security_group_rule_id": "sgr-0e7c4fac983cab030",
            "self": false,
            "source_security_group_id": "sg-0c88e92377a598e50",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2469606562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-0c2aff1245f7b890d",
            "self": false,
            "source_security_group_id": "sg-073bc7c5d392a25c4",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-146759564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-09a4f1f16f0253964",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3613483666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-01b370c1b90e31283",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2852079519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-06e501cabad803bad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1121071784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-0d3ad2fad2319c7a3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3434459342",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-03271bdc656e6f307",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-508800764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-0c2aff1245f7b890d",
            "self": false,
            "source_security_group_id": "sg-073bc7c5d392a25c4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4125043873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-0d60d699b993a0c7a",
            "self": false,
            "source_security_group_id": "sg-073bc7c5d392a25c4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3297509245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-0d3ad2fad2319c7a3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1624530066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c88e92377a598e50",
            "security_group_rule_id": "sgr-0d872c4a8e93160db",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infraheads_aws_eks_addons.module.addons.module.argocd[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "1876",
                "uid": "c8b437db-19e4-4ae7-aea6-1f46c5841657"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.infraheads_aws_eks.module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.infraheads_aws_eks.module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.infraheads_aws_eks.module.eks_blueprints.module.kms.aws_kms_key.this"
          ]
        }
      ]
    }
  ]
}